force-app/main/default/objects/Instructor__c/Instructor__c.object-meta.xml
<CustomObject>
    <description>Shareable (intended publicly) instructor object that ties a Contact to a program / dept / etc. Acts similar to affiliation in this.</description>
    <label>Instructor</label>
    <nameField>
        <label>Instructor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>