force-app/main/default/objects/Instructor__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <description>HTML body of the instructor bio.</description>
    <inlineHelpText>HTML body of the instructor bio.</inlineHelpText>
    <label>Bio</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>