force-app/main/default/objects/Instructor__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hiring department of the instructor.</description>
    <inlineHelpText>Hiring department of the instructor.</inlineHelpText>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account must be a department.</errorMessage>
        <filterItems>
            <field>Account.RecordType.NamespacePrefix</field>
            <operation>equals</operation>
            <value>csuoee</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>University_Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Instructors</relationshipLabel>
    <relationshipName>Department_Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>