force-app/main/default/objects/Instructor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Primary Instructor Contact Email.</description>
    <inlineHelpText>Primary Instructor Contact Email.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>