force-app/main/default/objects/Instructor__c/fields/Headshot_Public_Link__c.field-meta.xml
<CustomField>
    <fullName>Headshot_Public_Link__c</fullName>
    <description>The public URL of the current file.</description>
    <inlineHelpText>The public URL of the current file.</inlineHelpText>
    <label>Headshot Public Link</label>
    <type>Url</type>
</CustomField>