force-app/main/default/objects/Instructor__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Primary Instructor Contact Phone.</description>
    <inlineHelpText>Primary Instructor Contact Phone.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>