force-app/main/default/objects/Instructor__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Possible to have multiple contacts represented by an instructor. This is the primary Contact.</description>
    <inlineHelpText>Possible to have multiple contacts represented by an instructor. This is the primary Contact.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Instructors</relationshipLabel>
    <relationshipName>Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>