force-app/main/default/objects/Instructor__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Sequence in the instructor list... public package prefers Is_Primary on Affiliation, then this field.</description>
    <inlineHelpText>Sequence in the instructor list... public package prefers Is_Primary on Affiliation, then this field.</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>