force-app/main/default/objects/Instructor__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the intructors e.g. Professor or Assistant Professor</description>
    <inlineHelpText>Title of the intructors e.g. Professor or Assistant Professor</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>